# highlight_rs

./: Cargo.toml  README.md
examples/highlight-rs-demo/: Cargo.toml  README.md
examples/highlight-rs-demo/app/: Cargo.toml
examples/highlight-rs-demo/app/src/: app.rs  shell.rs
examples/highlight-rs-demo/app/src/pages/: demo.rs  mod.rs
examples/highlight-rs-demo/style/: _demo.scss  _highlight.scss  main.scss
src/: errors.rs  lib.rs  regex.rs  token.rs  utils.rs
src/language/: css.rs  language.rs  mod.rs  rust.rs
src/language/css/: pattern.rs  token.rs
src/language/rust/: pattern.rs  token.rs
tests/: html_escape.rs  langugae.rs
tests/css/: at_rules.rs  comments.rs  full.rs  keywords.rs  main.rs
tests/rust/: attribute.rs  comment.rs  function.rs  generic.rs  identifier.rs  keywords.rs  lifetime_and_generic.rs  macros.rs  main.rs  number.rs  operator.rs  punctation.rs  rust_tokenizer.rs  string.rs  types.rs  view_macro.rs
