[package]
name = "highlight_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = { version = "1.11.1", optional = true }
regex-lite = { version = "0.1", optional = true }
thiserror = "2.0.12"
strum = { version = "0.27.2", features = ["derive"], optional = true }

[features]
default = ["full-regex"]
full-regex = ["dep:regex"]
lite-regex = ["dep:regex-lite"]
strum = ["dep:strum"]
